# A.iS.P.

.github/workflows/: build.yaml
LAB/: CMakeLists.txt
LAB/LAB1/: CMakeLists.txt
LAB/LAB10/: main.c
LAB/LAB10/includes/: LAB9.h
LAB/LAB10/includes/c/: LAB9.c  sorting.c
LAB/LAB2/: CMakeLists.txt  Makefile
LAB/LAB3/: CMakeLists.txt  Makefile  list.txt  main.c  out  printedList.txt  program
LAB/LAB3/includes/: LAB3.h  menu.h  test.h
LAB/LAB3/includes/c/: LAB3.c  menu.c  test.c
LAB/LAB4/: main.c
LAB/LAB4/includes/: LAB4.h  test.h
LAB/LAB4/includes/c/: LAB4.c  test.c
LAB/LAB5/: CMakeLists.txt  main.c
LAB/LAB5/includes/: LAB5.h  test.h
LAB/LAB5/includes/c/: LAB5.c  test.c
LAB/LAB6/: CMakeLists.txt  main.c
LAB/LAB6/includes/: LAB6.h
LAB/LAB6/includes/c/: LAB6.c  menu.c
LAB/LAB7/: main.c
LAB/LAB7/includes/: LAB7.h
LAB/LAB7/includes/c/: LAB7.c  menu.c
LAB/LAB8/: main.c  postfix  postfix.txt
LAB/LAB8/includes/: LAB8.h
LAB/LAB8/includes/c/: LAB8.c
LAB/LAB9/: main.c
LAB/LAB9/includes/: LAB9.h  menu.h
LAB/LAB9/includes/c/: LAB9.c  menu.c  sorting.c
LAB/lib/: CMakeLists.txt
